--- a/Frontend/langvetai-frontend/src/styles/InputPage.css
+++ b/Frontend/langvetai-frontend/src/styles/InputPage.css
@@ -66,7 +66,7 @@ input[type='text'] {
   margin-left: 20px;
   border-radius: 4px;
   font-size: 14px;
-  background-color: #fefefe;
+  background-color: #f8f8f8;
   transition: border-color 0.3s ease;
 }
 
