--- a/Frontend/langvetai-frontend/src/styles/OutputPage.css
+++ b/Frontend/langvetai-frontend/src/styles/OutputPage.css
@@ -6,18 +6,18 @@
   }
   /* header  */
   .header {
-    background-color: #4caf50; /* Green background for the header */
+    background-color: #4caf50;
     padding: 20px;
     position: fixed;
     width: 100%;
     top: 0;
     left: 0;
-    z-index: 1000; /* Ensure the header is above other content */
+    z-index: 1000; 
     display: flex;
     align-items: center;
-    justify-content: flex-start; /* Align the content to the right */
+    justify-content: flex-start; 
     gap: 10px;
-    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2); /* Shadow only on the bottom */
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
   }
   
   .logo-container {
@@ -26,20 +26,20 @@
   }
   
   .logo {
-    width: 40px; /* Adjust based on your logo size */
+    width: 40px;
     height: auto;
   }
 
   #LangvetAI {
     font-size: 20px;
-    color: #9fe3a2; /* White text color */
+    color: #9fe3a2;
     margin-left: 15px;
   }
   
   h1 {
     margin: 0;
-    color: #edf9ed; /* White text color */
-    font-size: 23px; /* Adjust font size as needed */
+    color: #edf9ed;
+    font-size: 23px;
   }
   
   
@@ -57,6 +57,7 @@
   }
   
   .term-card {
+    margin-top: 40px;
     background-color: #ffffff;
     border: 1px solid #dee2e6;
     border-radius: 8px;
